syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

option go_package = "./;api";
package link;

message ShortLinkRequest {
  string shortLink = 1;
}

message ShortLinkResponse {
  string originalLink = 1;
}

message CreateShortLinkRequest {
  string originalLink = 1;
}

message CreateShortLinkResponse {
  string shortLink = 1;
  string expiresAt = 2;
}

service ShortLinkService {
  rpc GetOriginalLink(ShortLinkRequest) returns (ShortLinkResponse);
  rpc CreateShortLink(CreateShortLinkRequest) returns (CreateShortLinkResponse);
}